css/style.css
html, body, header, section, article, div , ul, li, img, h1, h2 {
margin:0 auto;
padding: 0;
font-family: "Helvetica", sans-serif;
}	


.nav-list {
	width:100%;
	position: relative;
	display: none;
	background-color: #B3B3B3;
	
}

nav{
	padding-bottom: 0;
	margin-bottom: 0;
}

nav>div{
	background-color: #333;

}

.nav-list li {
	display: block;
	float: none;
	margin-bottom:20px;
	padding-bottom: 0px;
	padding-left:20px;
	padding-top: 20px;
}

.nav-list>li>a{
	text-decoration: none;
	color: #FFCC66;
}

.menu-icon {
	padding-top: 5px;
	margin-left: 15px;
	cursor: pointer;
	position: relative;
}

.page>h1 {
	font-size: 3.5em ;
	margin: 0.5em auto;
	color: #EDBC1D;
	font-family: "Diplomata SC", sans-serif;
}

.page {
	padding: 0.1em 1em;
	max-width: 61.75em;	
}

.page>h2 {
	margin-top: 0.5em;
	margin-bottom: 0.25em;
	font-weight: 600;
}

.section-1>header{
	background-color: #E6E6E6;
}

.bankcolor{
	background-color: #333;
}

.page>h1 {
	font-size: 3.5em;
	letter-spacing: -4;

} 

.section-1 {
	background-color: #B3B3B3;
	color: #EFEDCB; 
}

.section-2{
	
}

.images{
	width:100%;	
}

/*.images>a{
	width: 100%;
}*/

img {
	max-width:100%;
	vertical-align: bottom;
}

@media(min-width: 960px) {
	.images {
		max-width: ;
		padding: 0 1em;
		margin: 0 auto;
	}

	.menu-icon {
		display: none;
	}
}

footer {
	background-color: #EDBC1D;
}

footer>ul{
	padding-left: 0.1em;
	padding-right: 0.1em;
}	

